vaultwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  labels:
    name: vaultwarden
    app.kubernetes.io/name: vaultwarden
