vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-svc
  namespace: vaultwarden
spec:
  type: ClusterIP
  selector:
    app: vaultwarden
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
